# execmgr

./: .gitignore  Cargo.toml  build.sh  readme.md
api/: main.py
api/routers/: __init__.py  apps.py  system.py
api/schemas/: app.py
execmge-api/: main.py  pyproject.toml
execmge-api/frontend/: package-lock.json  package.json  tailwind.config.ts
execmge-api/frontend/src/: index.css
execmge-api/frontend/src/components/: AppCard.tsx  AppDetailPanel.tsx  AppTable.tsx  CreateAppDialog.tsx  LogViewer.tsx  ScriptEditor.tsx  StatusBadge.tsx  SystemHeader.tsx  TerminalOutput.tsx  ThemeToggle.tsx
execmge-api/frontend/src/data/: mockData.ts
execmge-api/frontend/src/lib/: api.ts
execmge-api/frontend/src/pages/: Index.tsx
execmge-api/src/: __init__.py  models.py  utils.py
execmge-api/src/routers/: __init__.py  apps.py  info.py
src/: app.rs  cli.rs  main.rs  utils.rs
